add_library(model apartment.cpp group.cpp devicecontainer.cpp set.cpp
	modulator.cpp device.cpp nonaddressablemodelitem.cpp
	addressablemodelitem.cpp physicalmodelitem.cpp deviceinterface.cpp
	devicereference.cpp zone.cpp modelevent.cpp scenehelper.cpp
	busscanner.cpp busrequest.cpp modelpersistence.cpp)
